Blurry modal bug fixed

--- a/css/component.css
+++ b/css/component.css
@@ -33,10 +33,12 @@ perspective effects (not including the modals and the overlay).
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-ms-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
+	-webkit-transform: translateX(-50%) translateY(calc(-50% - .5px));
+	-moz-transform: translateX(-50%) translateY(calc(-50% - .5px));
+	-ms-transform: translateX(-50%) translateY(calc(-50% - .5px));
+	transform: translateX(-50%) translateY(calc(-50% - .5px));
+	-webkit-font-smoothing: antialiased;
+	-webkit-filter: blur(0.000001px);
 }
 
 .md-show {
